src/objects/Applied_SREC_Contract_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Astrum_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Contract</label>
        <referenceTo>Astrum_Contract__c</referenceTo>
        <relationshipLabel>Applied SREC Contract Offers</relationshipLabel>
        <relationshipName>Applied_SREC_Contract_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months__c</fullName>
        <label>Contract Length (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>SREC_Contract_Offer__r.End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SREC Contract Offer</label>
        <referenceTo>SREC_Contract_Offer__c</referenceTo>
        <relationshipLabel>Applied SREC Contract Offers</relationshipLabel>
        <relationshipName>Applied_SREC_Contract_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SREC_Market__c</fullName>
        <formula>SREC_Contract_Offer__r.SREC_Market__r.Name</formula>
        <label>SREC Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Applied SREC Contract Offers</relationshipLabel>
        <relationshipName>Applied_SREC_Contract_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>SREC_Contract_Offer__r.Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upfront_Amount__c</fullName>
        <label>Upfront Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Effective_Dollar_Amount__c</fullName>
        <label>Upfront Effective Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Amount_SREC__c</fullName>
        <label>Yearly Amount ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Amount_of_ACP__c</fullName>
        <label>Yearly Amount (% of ACP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Applied SREC Contract Offer</label>
    <nameField>
        <label>Applied SREC Contract Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied SREC Contract Offers</pluralLabel>
    <recordTypes>
        <fullName>Brokerage</fullName>
        <active>true</active>
        <label>Brokerage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upfront</fullName>
        <active>true</active>
        <label>Upfront</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upfront_Cash_Back</fullName>
        <active>true</active>
        <label>Upfront Cash Back</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yearly</fullName>
        <active>true</active>
        <label>Yearly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>